--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <textarea id="html-code" onkeyup="run()"></textarea>
             <label><i class="fa fa-css3"></i> CSS</label>
             <textarea id="css-code" onkeyup="run()"></textarea>
-            <label><i class="fa fa-js"></i> JavaScript</label>
+            <label><i class="fa-brands fa-js"></i> JavaScript</label>
             <textarea id="js-code" onkeyup="run()"></textarea>
         </div>
         <div class="right">
